--- a/_frc/6000/6001.md
+++ b/_frc/6000/6001.md
@@ -1,24 +1,31 @@
 ---
 title: FRC Team 6001
 team:
+
   type: FRC
   number: 6001
   name: CIP
   rookie_year: 2016
+  Robot Name:Kevin 
   location: Medellin, Antioquia, Colombia
-  sponsors:
+  
+  sponsors & schools: 
   - Montessori School Medellin
-  - The Columbus School
+  - Colegio Canadiense 
   - Marymount School Medellin
   - Colegio San Jose de las Vegas
   - Colegio Colombo Britanico Medellin
-  - Compania de Maria Medellin
+  - Compania de Maria La Enseñanza
   - Colombian Innovation Program
+  
   links:
     Website: https://ciprobotics.weebly.com/
     Facebook: https://www.facebook.com/ciprobotics
     Twitter: https://twitter.com/ciprobotica
-    Instagram: https://www.instagram.com/cip_robotica
+    Instagram: https://www.instagram.com/cip6001
 ---
+DESCRIPTION: 
 
-{% include remove_this_line_and_add_a_paragraph %}
+CIP (or Colombian Innovation Program)is a team from Medellin, Colombia created in 2016 with the purpose of 
+showing students and teenagers the importance of technology and robotics in life. Technology and innovation 
+is the key of learning and development. 
